# django-rag

./: .gitignore  404_urls.txt  README.md  \  count_tokens_from_dumped_html.py  pyproject.toml  run_scraper.py  tokenizator.py
django_knowledge/: 404_urls.txt  manage.py  pytest.ini  visualization_app.py
django_knowledge/chunking/: admin.py  apps.py  chunker.py  models.py
django_knowledge/chunking/migrations/: 0001_initial.py  0002_chunkconfig_chunk_config.py
django_knowledge/code_fetching/: apps.py  constants.py
django_knowledge/django_knowledge/: asgi.py  settings.py  urls.py  wsgi.py
django_knowledge/embedding_generator/: persistence.py  using_lm_studio.py
django_knowledge/embeddings_evaluator/: apps.py
django_knowledge/embeddings_evaluator/migrations/: 0001_initial.py
django_knowledge/experiment_tracking/: admin.py  apps.py  constants.py  models.py  run.py
django_knowledge/experiment_tracking/migrations/: 0001_initial.py  0002_embeddereval_delete_evaluation.py  0003_embeddereval_num_tests.py  0004_rename_eval_score_embeddereval_average_score_and_more.py  0005_embedderevalconfig_embeddereval_config.py  0006_embedderevalconfig_chunk_config.py  0007_badresult.py
django_knowledge/html_download/: admin.py  apps.py  html_scraper.py  models.py  utils.py
django_knowledge/html_download/migrations/: 0001_initial.py  0002_urltovisit.py  (+3 more)
django_knowledge/synthetic_data_generator/: admin.py  apps.py  chunk_describe.py  models.py
django_knowledge/text_extraction/: to_markdown.py
django_knowledge/tokenization/: tokenize.py
django_knowledge/vectordb/: db.py
(+340 files in other folders)
