[project]
name = "one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0",
    "django-click>=2.4.1",
    "django-extensions>=4.1",
    "loguru>=0.7.3",
    "markdownify>=1.2.2",
    "ptpython>=3.0.32",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-sugar>=1.1.1",
    "rich>=14.2.0",
    "scrapy>=2.13.4",
    "tiktoken>=0.12.0",
]
